ConceptId as string, not number.